vezba06/vezba06/semantic.output
Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: function
    3              | function_list function

    4 $@1: %empty

    5 $@2: %empty

    6 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 body

    7 type: _TYPE

    8 parameter: %empty
    9          | type _ID

   10 $@3: %empty

   11 body: _LBRACKET $@3 variable_list statement_list _RBRACKET

   12 variable_list: %empty
   13              | variable_list variable

   14 $@4: %empty

   15 variable: type $@4 ids _SEMICOLON

   16 ids: _ID
   17    | ids _COMMA _ID

   18 statement_list: %empty
   19               | statement_list statement

   20 statement: compound_statement
   21          | assignment_statement
   22          | if_statement
   23          | return_statement

   24 @5: %empty

   25 compound_statement: _LBRACKET variable_list @5 statement_list _RBRACKET

   26 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   27 num_exp: exp
   28        | num_exp _AROP exp

   29 exp: literal
   30    | _ID
   31    | _ID _POSTINC
   32    | function_call
   33    | _LPAREN num_exp _RPAREN

   34 literal: _INT_NUMBER
   35        | _UINT_NUMBER

   36 $@6: %empty

   37 function_call: _ID $@6 _LPAREN argument _RPAREN

   38 argument: %empty
   39         | num_exp

   40 if_statement: if_part
   41             | if_part _ELSE statement

   42 if_part: _IF _LPAREN rel_exp _RPAREN statement

   43 rel_exp: num_exp _RELOP num_exp

   44 return_statement: _RETURN _SEMICOLON
   45                 | _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 7
_IF (259) 42
_ELSE (260) 41
_RETURN (261) 44 45
_ID (262) 6 9 16 17 26 30 31 37
_INT_NUMBER (263) 34
_UINT_NUMBER (264) 35
_LPAREN (265) 6 33 37 42
_RPAREN (266) 6 33 37 42
_LBRACKET (267) 11 25
_RBRACKET (268) 11 25
_ASSIGN (269) 26
_SEMICOLON (270) 15 26 44 45
_AROP (271) 28
_RELOP (272) 43
_COMMA (273) 17
_POSTINC (274) 31
ONLY_IF (275)


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
program (22)
    on left: 1, on right: 0
function_list (23)
    on left: 2 3, on right: 1 3
function (24)
    on left: 6, on right: 2 3
$@1 (25)
    on left: 4, on right: 6
$@2 (26)
    on left: 5, on right: 6
type (27)
    on left: 7, on right: 6 9 15
parameter (28)
    on left: 8 9, on right: 6
body (29)
    on left: 11, on right: 6
$@3 (30)
    on left: 10, on right: 11
variable_list (31)
    on left: 12 13, on right: 11 13 25
variable (32)
    on left: 15, on right: 13
$@4 (33)
    on left: 14, on right: 15
ids (34)
    on left: 16 17, on right: 15 17
statement_list (35)
    on left: 18 19, on right: 11 19 25
statement (36)
    on left: 20 21 22 23, on right: 19 41 42
compound_statement (37)
    on left: 25, on right: 20
@5 (38)
    on left: 24, on right: 25
assignment_statement (39)
    on left: 26, on right: 21
num_exp (40)
    on left: 27 28, on right: 26 28 33 39 43 45
exp (41)
    on left: 29 30 31 32 33, on right: 27 28
literal (42)
    on left: 34 35, on right: 29
function_call (43)
    on left: 37, on right: 32
$@6 (44)
    on left: 36, on right: 37
argument (45)
    on left: 38 39, on right: 37
if_statement (46)
    on left: 40 41, on right: 22
if_part (47)
    on left: 42, on right: 40 41
rel_exp (48)
    on left: 43, on right: 42
return_statement (49)
    on left: 44 45, on right: 23


State 0

    0 $accept: . program $end

    _TYPE  shift, and go to state 1

    program        go to state 2
    function_list  go to state 3
    function       go to state 4
    type           go to state 5


State 1

    7 type: _TYPE .

    $default  reduce using rule 7 (type)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: function_list .
    3 function_list: function_list . function

    _TYPE  shift, and go to state 1

    $default  reduce using rule 1 (program)

    function  go to state 7
    type      go to state 5


State 4

    2 function_list: function .

    $default  reduce using rule 2 (function_list)


State 5

    6 function: type . _ID $@1 _LPAREN parameter _RPAREN $@2 body

    _ID  shift, and go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 function_list: function_list function .

    $default  reduce using rule 3 (function_list)


State 8

    6 function: type _ID . $@1 _LPAREN parameter _RPAREN $@2 body

    $default  reduce using rule 4 ($@1)

    $@1  go to state 9


State 9

    6 function: type _ID $@1 . _LPAREN parameter _RPAREN $@2 body

    _LPAREN  shift, and go to state 10


State 10

    6 function: type _ID $@1 _LPAREN . parameter _RPAREN $@2 body

    _TYPE  shift, and go to state 1

    $default  reduce using rule 8 (parameter)

    type       go to state 11
    parameter  go to state 12


State 11

    9 parameter: type . _ID

    _ID  shift, and go to state 13


State 12

    6 function: type _ID $@1 _LPAREN parameter . _RPAREN $@2 body

    _RPAREN  shift, and go to state 14


State 13

    9 parameter: type _ID .

    $default  reduce using rule 9 (parameter)


State 14

    6 function: type _ID $@1 _LPAREN parameter _RPAREN . $@2 body

    $default  reduce using rule 5 ($@2)

    $@2  go to state 15


State 15

    6 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 . body

    _LBRACKET  shift, and go to state 16

    body  go to state 17


State 16

   11 body: _LBRACKET . $@3 variable_list statement_list _RBRACKET

    $default  reduce using rule 10 ($@3)

    $@3  go to state 18


State 17

    6 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 body .

    $default  reduce using rule 6 (function)


State 18

   11 body: _LBRACKET $@3 . variable_list statement_list _RBRACKET

    $default  reduce using rule 12 (variable_list)

    variable_list  go to state 19


State 19

   11 body: _LBRACKET $@3 variable_list . statement_list _RBRACKET
   13 variable_list: variable_list . variable

    _TYPE  shift, and go to state 1

    $default  reduce using rule 18 (statement_list)

    type            go to state 20
    variable        go to state 21
    statement_list  go to state 22


State 20

   15 variable: type . $@4 ids _SEMICOLON

    $default  reduce using rule 14 ($@4)

    $@4  go to state 23


State 21

   13 variable_list: variable_list variable .

    $default  reduce using rule 13 (variable_list)


State 22

   11 body: _LBRACKET $@3 variable_list statement_list . _RBRACKET
   19 statement_list: statement_list . statement

    _IF        shift, and go to state 24
    _RETURN    shift, and go to state 25
    _ID        shift, and go to state 26
    _LBRACKET  shift, and go to state 27
    _RBRACKET  shift, and go to state 28

    statement             go to state 29
    compound_statement    go to state 30
    assignment_statement  go to state 31
    if_statement          go to state 32
    if_part               go to state 33
    return_statement      go to state 34


State 23

   15 variable: type $@4 . ids _SEMICOLON

    _ID  shift, and go to state 35

    ids  go to state 36


State 24

   42 if_part: _IF . _LPAREN rel_exp _RPAREN statement

    _LPAREN  shift, and go to state 37


State 25

   44 return_statement: _RETURN . _SEMICOLON
   45                 | _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 38
    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40
    _LPAREN       shift, and go to state 41
    _SEMICOLON    shift, and go to state 42

    num_exp        go to state 43
    exp            go to state 44
    literal        go to state 45
    function_call  go to state 46


State 26

   26 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON

    _ASSIGN  shift, and go to state 47


State 27

   25 compound_statement: _LBRACKET . variable_list @5 statement_list _RBRACKET

    $default  reduce using rule 12 (variable_list)

    variable_list  go to state 48


State 28

   11 body: _LBRACKET $@3 variable_list statement_list _RBRACKET .

    $default  reduce using rule 11 (body)


State 29

   19 statement_list: statement_list statement .

    $default  reduce using rule 19 (statement_list)


State 30

   20 statement: compound_statement .

    $default  reduce using rule 20 (statement)


State 31

   21 statement: assignment_statement .

    $default  reduce using rule 21 (statement)


State 32

   22 statement: if_statement .

    $default  reduce using rule 22 (statement)


State 33

   40 if_statement: if_part .
   41             | if_part . _ELSE statement

    _ELSE  shift, and go to state 49

    $default  reduce using rule 40 (if_statement)


State 34

   23 statement: return_statement .

    $default  reduce using rule 23 (statement)


State 35

   16 ids: _ID .

    $default  reduce using rule 16 (ids)


State 36

   15 variable: type $@4 ids . _SEMICOLON
   17 ids: ids . _COMMA _ID

    _SEMICOLON  shift, and go to state 50
    _COMMA      shift, and go to state 51


State 37

   42 if_part: _IF _LPAREN . rel_exp _RPAREN statement

    _ID           shift, and go to state 38
    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40
    _LPAREN       shift, and go to state 41

    num_exp        go to state 52
    exp            go to state 44
    literal        go to state 45
    function_call  go to state 46
    rel_exp        go to state 53


State 38

   30 exp: _ID .
   31    | _ID . _POSTINC
   37 function_call: _ID . $@6 _LPAREN argument _RPAREN

    _POSTINC  shift, and go to state 54

    _LPAREN   reduce using rule 36 ($@6)
    $default  reduce using rule 30 (exp)

    $@6  go to state 55


State 39

   34 literal: _INT_NUMBER .

    $default  reduce using rule 34 (literal)


State 40

   35 literal: _UINT_NUMBER .

    $default  reduce using rule 35 (literal)


State 41

   33 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 38
    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40
    _LPAREN       shift, and go to state 41

    num_exp        go to state 56
    exp            go to state 44
    literal        go to state 45
    function_call  go to state 46


State 42

   44 return_statement: _RETURN _SEMICOLON .

    $default  reduce using rule 44 (return_statement)


State 43

   28 num_exp: num_exp . _AROP exp
   45 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 57
    _AROP       shift, and go to state 58


State 44

   27 num_exp: exp .

    $default  reduce using rule 27 (num_exp)


State 45

   29 exp: literal .

    $default  reduce using rule 29 (exp)


State 46

   32 exp: function_call .

    $default  reduce using rule 32 (exp)


State 47

   26 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 38
    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40
    _LPAREN       shift, and go to state 41

    num_exp        go to state 59
    exp            go to state 44
    literal        go to state 45
    function_call  go to state 46


State 48

   13 variable_list: variable_list . variable
   25 compound_statement: _LBRACKET variable_list . @5 statement_list _RBRACKET

    _TYPE  shift, and go to state 1

    $default  reduce using rule 24 (@5)

    type      go to state 20
    variable  go to state 21
    @5        go to state 60


State 49

   41 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 24
    _RETURN    shift, and go to state 25
    _ID        shift, and go to state 26
    _LBRACKET  shift, and go to state 27

    statement             go to state 61
    compound_statement    go to state 30
    assignment_statement  go to state 31
    if_statement          go to state 32
    if_part               go to state 33
    return_statement      go to state 34


State 50

   15 variable: type $@4 ids _SEMICOLON .

    $default  reduce using rule 15 (variable)


State 51

   17 ids: ids _COMMA . _ID

    _ID  shift, and go to state 62


State 52

   28 num_exp: num_exp . _AROP exp
   43 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 58
    _RELOP  shift, and go to state 63


State 53

   42 if_part: _IF _LPAREN rel_exp . _RPAREN statement

    _RPAREN  shift, and go to state 64


State 54

   31 exp: _ID _POSTINC .

    $default  reduce using rule 31 (exp)


State 55

   37 function_call: _ID $@6 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 65


State 56

   28 num_exp: num_exp . _AROP exp
   33 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 66
    _AROP    shift, and go to state 58


State 57

   45 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 45 (return_statement)


State 58

   28 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 38
    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40
    _LPAREN       shift, and go to state 41

    exp            go to state 67
    literal        go to state 45
    function_call  go to state 46


State 59

   26 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   28 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 68
    _AROP       shift, and go to state 58


State 60

   25 compound_statement: _LBRACKET variable_list @5 . statement_list _RBRACKET

    $default  reduce using rule 18 (statement_list)

    statement_list  go to state 69


State 61

   41 if_statement: if_part _ELSE statement .

    $default  reduce using rule 41 (if_statement)


State 62

   17 ids: ids _COMMA _ID .

    $default  reduce using rule 17 (ids)


State 63

   43 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 38
    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40
    _LPAREN       shift, and go to state 41

    num_exp        go to state 70
    exp            go to state 44
    literal        go to state 45
    function_call  go to state 46


State 64

   42 if_part: _IF _LPAREN rel_exp _RPAREN . statement

    _IF        shift, and go to state 24
    _RETURN    shift, and go to state 25
    _ID        shift, and go to state 26
    _LBRACKET  shift, and go to state 27

    statement             go to state 71
    compound_statement    go to state 30
    assignment_statement  go to state 31
    if_statement          go to state 32
    if_part               go to state 33
    return_statement      go to state 34


State 65

   37 function_call: _ID $@6 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 38
    _INT_NUMBER   shift, and go to state 39
    _UINT_NUMBER  shift, and go to state 40
    _LPAREN       shift, and go to state 41

    $default  reduce using rule 38 (argument)

    num_exp        go to state 72
    exp            go to state 44
    literal        go to state 45
    function_call  go to state 46
    argument       go to state 73


State 66

   33 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 33 (exp)


State 67

   28 num_exp: num_exp _AROP exp .

    $default  reduce using rule 28 (num_exp)


State 68

   26 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 26 (assignment_statement)


State 69

   19 statement_list: statement_list . statement
   25 compound_statement: _LBRACKET variable_list @5 statement_list . _RBRACKET

    _IF        shift, and go to state 24
    _RETURN    shift, and go to state 25
    _ID        shift, and go to state 26
    _LBRACKET  shift, and go to state 27
    _RBRACKET  shift, and go to state 74

    statement             go to state 29
    compound_statement    go to state 30
    assignment_statement  go to state 31
    if_statement          go to state 32
    if_part               go to state 33
    return_statement      go to state 34


State 70

   28 num_exp: num_exp . _AROP exp
   43 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 58

    $default  reduce using rule 43 (rel_exp)


State 71

   42 if_part: _IF _LPAREN rel_exp _RPAREN statement .

    $default  reduce using rule 42 (if_part)


State 72

   28 num_exp: num_exp . _AROP exp
   39 argument: num_exp .

    _AROP  shift, and go to state 58

    $default  reduce using rule 39 (argument)


State 73

   37 function_call: _ID $@6 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 75


State 74

   25 compound_statement: _LBRACKET variable_list @5 statement_list _RBRACKET .

    $default  reduce using rule 25 (compound_statement)


State 75

   37 function_call: _ID $@6 _LPAREN argument _RPAREN .

    $default  reduce using rule 37 (function_call)
